--- a/javascript_jquery/day03/sample01.html
+++ b/javascript_jquery/day03/sample01.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        div{
+            font-family: 'd2coding';
+            white-space: pre; /* 연속된 공백과 줄바꿈을 그대로 표시 */
+        }
+    </style>
+
     <script>
         function log(...texts) {
         const logDiv = document.getElementById("log");
@@ -108,13 +116,105 @@
         //     gugudan(i, 1);
         // }
 
-        for(let i= 0; i<5; i++){
-            let strStar = "";
-            for(let j = 0; j < i+1; j++){
-                strStar+="*"
-            }
-            log(strStar);
+        // for(let i= 0; i<5; i++){
+        //     let strStar = "";
+        //     for(let j = 0; j < i+1; j++){
+        //         strStar+="*"
+        //     }
+        //     log(strStar);
+        // }
+
+        // for(let i= 0; i<5; i++){
+        //     let strStar = "";
+        //     for(let j = 5; j > i; j--){
+        //         strStar+="*"
+        //     }
+        //     log(strStar);
+        // }
+
+        // for(let i= 0; i < 5; i++){
+        //     let strStar = "";
+        //     for(let j = 0; j < 5; j++){
+        //         if(Math.abs(i-4) > j) strStar+=" ";
+        //         else strStar+="*";
+        //     }
+        //     log(strStar);
+        // }
+        
+        // 미완 피라미드
+        // let count = 5;
+        // for(let i=0; i < count; i++){
+        //     let strStar = "";
+        //     for(let j =0; j< 2*count+1; j++){
+        //         console.log((2*i+1));
+        //         if(((2*count+1)-(2*i+1))/2 > j) strStar+=" ";
+        //         else{ strStar+="*"; if(i+1 < j-(((2*count+1)-(2*i+1))/2)) break;}
+        //     }
+        //     log(strStar);
+        // }
+
+
+        // while
+        // let i = 0;
+        // let sum = 0;
+        // while(i<10){
+        //     sum+= i+1;
+        //     i++;
+        // }
+        // log(sum);
+
+        // i=0;
+        // let money = 1000000;
+        // while(i<12){
+        //     money*=1.01;
+        //     i++;
+        // }
+        // log(parseInt(money));
+
+
+        //활용
+        // for(let i =0; i<5; i++){
+        //     log((i+1)*2);
+        // }
+
+        // for(let i = 0; i < 10; i++){
+        //     if((i+1)%2 == 1) continue;
+        //     log(i+1);
+        // }
+
+        // for(let i = 0; i< 10; i++){
+        //     if((i+1)%3 == 0) continue;
+        //     log(i+1);
+        // }
+
+        // i=0;
+        // while(i<10){
+        //     i++;
+        //     if((i)%2 == 0) continue;
+        //     log(i);
+        // }
+
+        // let num = prompt("숫자 입력: ");
+        // let sum = 0;
+
+        // for(let i=0; i<1; ){
+        //     sum+=num%10;
+        //     if(parseInt(num/10) == 0)break;
+        //     num=parseInt(num/10);
+        // }
+
+        // log(sum);
+
+        let num = prompt("숫자 입력: ");
+        let count = 0;
+
+        for(let i=0; i<1; ){
+            if(num%10 === 3 || num%10 === 6 || num%10 === 9) count++;
+            if(parseInt(num/10) == 0)break;
+            num=parseInt(num/10);
         }
+
+        log(count);
     </script>
 
 </body>
