--- a/javascript_jquery/day03/sample01.html
+++ b/javascript_jquery/day03/sample01.html
@@ -45,6 +45,35 @@
         //     log(parseInt(money));
         // }
         // log(parseInt(money));
+        
+
+        // 단리 이자, 값은?-------------------------------------------------
+        //moneyOnePercent += money * 1.01;  -> moneyOnePercent에다가 money의 101%만큼 더해라
+        //for i = 1 -> moneyOnePercent = 1010000(일백일만)
+        //for i = 2 -> moneyOnePercent = 2020000(이백이만)
+        //for i = 3 -> moneyOnePercent = 3030000(삼백삼만)
+        //for i = 4 -> moneyOnePercent = 4040000(사백사만)
+        //for i = 5 -> moneyOnePercent = 5050000(오백오만)
+        //for i = 6 -> moneyOnePercent = 6060000(육백육만)
+        //for i = 7 -> moneyOnePercent = 7070000(칠백칠만)
+        //for i = 8 -> moneyOnePercent = 8080000(팔백팔만)
+        //for i = 9 -> moneyOnePercent = 9090000(구백구만)
+        //for i = 10 -> moneyOnePercent = 10100000(일천일십만)
+        //for i = 11 -> moneyOnePercent = 11110000(일천일백일십일만)
+         //for i = 12 -> moneyOnePercent = 12120000(일천이백일십이만)
+
+
+         //단리 계산 (잔고)=(원금)+{(원금)X(이자율)x(개월수)}
+         //1개월 기준 (잔고)=(원금)+{(원금)X(이자율)}
+        // let money = 1000000;
+        // let moneyOnePercent = 0;
+        // for (i = 1; i <= 12; i++) {
+        //   //   moneyOnePercent = moneyOnePercent + money * 1.01;
+        //   moneyOnePercent += money * 1.01; 
+        //   document.write(moneyOnePercent) // 확인 코드
+        // }
+        // document.write(moneyOnePercent);
+        // document.write("<hr>");
 
         // 단리
         // let money = 1000000;
