--- a/javascript_jquery/day05/sample01.html
+++ b/javascript_jquery/day05/sample01.html
@@ -167,6 +167,8 @@
          document.write("<br> Winner! : ",winnerName," WinnerSum : ",winnerCardSum,"<br><br>");
 
         // 3 end
+
+        // 4 start 카드를 객체(Object or Class)로 만들어보기(카드숫자, 카드문양, 카드이미지)
     </script>
 </body>
 </html>
